# ThePonsic

./: Cargo.toml  README.md
ponsic/: Cargo.toml  README.md
ponsic-color/: Cargo.toml  README.md
ponsic-color/src/: const_color.rs  lib.rs
ponsic-example/: Cargo.toml
ponsic-example/src/: button.rs  lib.rs  main.rs  mainwindow.rs
ponsic-types/: Cargo.toml  README.md
ponsic-types/src/: lib.rs  point.rs  rect.rs  size.rs
ponsic-winsafe/: Cargo.toml  README.md
ponsic-winsafe/examples/: context.rs  context_2d.rs  dialog.rs  helloworld.rs  multwindows.rs  timer.rs  window.rs  window_fast_paint.rs  window_with_data.rs
ponsic-winsafe/src/: events.rs  lib.rs  safe_proc.rs  the.rs  window_data.rs
ponsic-winsafe/src/graphics/: context.rs  mod.rs
ponsic-winsafe/src/graphics/context_2d/: brush.rs  color.rs  mod.rs  pen.rs  text.rs  traits.rs  types.rs
ponsic-winsafe/src/win/: app.rs  class.rs  dialog.rs  error.rs  mod.rs  timer.rs  window.rs
ponsic-winsafe/src/win/gen_by_py/: error_translate.rs  mod.rs  msg_translate.rs
ponsic/examples/: main_window.rs  push_button.rs  window.rs
ponsic/src/: lib.rs
ponsic/src/widgets/: main_window.rs  mod.rs  push_button.rs  window.rs
utils/: error_code.rs  gen_const_color.py  gen_error_code.py  gen_msg.py
