[package]
name = "ponsic-winsafe"
version = "0.1.0"
edition = "2024"
description = "The dependency of the `ponsic` crate."
repository = "https://github.com/Anglebase/ThePonsic.git"
license = "Apache-2.0"

[target."cfg(windows)".dependencies]
winapi = { version = "0.3.9", features = ["winuser", "wingdi", "libloaderapi","errhandlingapi"] }
