[package]
name = "ponsic-winsafe"
version = "1.1.0"
edition = "2024"
description = "The dependency of the `ponsic` crate."
repository = "https://github.com/Anglebase/ThePonsic.git"
license = "Apache-2.0"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = [
    "aarch64-pc-windows-msvc",
    "i686-pc-windows-msvc",
    "x86_64-pc-windows-msvc",
]

[target."cfg(windows)".dependencies]
winapi = { version = "0.3.9", features = [
    "winuser",
    "wingdi",
    "libloaderapi",
    "errhandlingapi",
] }

[dependencies]
ponsic-types = { version = "0.1.0", path = "../ponsic-types" }
ponsic-color = { version = "0.1.0", path = "../ponsic-color" }
