[package]
name = "ponsic"
version = "0.1.0"
edition = "2024"
description = "A simple, fast, and safe library for creating Windows GUI applications."
repository = "https://github.com/Anglebase/ThePonsic.git"
license = "Apache-2.0"

[target.'cfg(windows)'.dependencies]
ponsic-winsafe = { path = "../ponsic-winsafe" }

[dependencies]
inherits = "0.1.2"
lazy_static = "1.5.0"
