[package]
name = "ponsic"
version = "0.1.0"
edition = "2024"
description = "A simple, fast, and safe library for creating Windows GUI applications."
repository = "https://github.com/Anglebase/ThePonsic.git"
license = "Apache-2.0"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = ["aarch64-pc-windows-msvc", "i686-pc-windows-msvc", "x86_64-pc-windows-msvc"]

[target.'cfg(windows)'.dependencies]
ponsic-winsafe = "1.0.0"

[dependencies]
inherits = "0.1.2"
lazy_static = "1.5.0"
