[package]
name = "ponsic"
version = "1.0.0"
edition = "2024"
description = "A simple, fast, and safe library for creating Windows GUI applications."
repository = "https://github.com/Anglebase/ThePonsic.git"
license = "Apache-2.0"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = [
    "aarch64-pc-windows-msvc",
    "i686-pc-windows-msvc",
    "x86_64-pc-windows-msvc",
]

[target.'cfg(windows)'.dependencies]
ponsic-winsafe = { version = "1.2.0", path = "../ponsic-winsafe" }

[dependencies]
